uploaded css for student_bio

--- a/student_bio.html
+++ b/student_bio.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Meredith's Bio</title>
 	
 </head>
@@ -12,18 +13,19 @@
 		<H1>Student Bio</H1>
 	</header>
 
-	<div>	
+	<div class="container">	
 
-		<section>		
+		<section id="main-bio">		
+			
 			<H2>Meredith Moore</H2>
 
-			<img src="http://placehold.it/200x200" alt="Meredith Moore">
+			<img id="bio-image" src="http://placehold.it/200x200" alt="Meredith Moore">
 			
-			<p>I'm a GIS System Administrator with a background in biology. I'm also the mother of 3 girls. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fringilla feugiat congue. Etiam turpis eros, eleifend sed aliquam ut, interdum sit amet libero. Vivamus ac urna eget erat rutrum lacinia non ut nunc. Nunc scelerisque pellentesque leo ut interdum. Vestibulum ac iaculis risus. Quisque accumsan sem sit amet metus interdum pretium. Quisque aliquam tellus ut congue auctor. Nullam eu nisi sagittis, interdum metus sed, scelerisque quam. Phasellus ac turpis elementum, pretium nisl a, commodo dui.</p>
+			<p>I'm a GIS System Administrator with a background in biology. I'm also the mother of 3 girls. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fringilla feugiat congue. Etiam turpis eros, eleifend sed aliquam ut, interdum sit amet libero. Vivamus ac urna eget erat rutrum lacinia non ut nunc. Nunc scelerisque pellentesque leo ut interdum.</p>
 
 		</section>
 		
-		<section>
+		<section id="contact-info">
 			<H2>Contact Info</H2>
 				
 				<ul>
